# SDG-AWS-SageMaker

./: .gitignore  Dockerfile  README.md  build.sh  push_to_ecr.sh  pyproject.toml  requirements.txt  run_pipeline.py  run_pipeline_local.py  training_job.ipynb
datasets/air_quality/: air_quality.csv
datasets/seattle/: seattle.csv
docs/: sdg_diagram.excalidraw
lib/: data_transformer.py  eval_helper.py  evaluation.py  evaluators.py  imputer.py  info.py  plotting.py  preprocess.py  utils.py
scripts/: eval_fidelity.py  eval_privacy.py  eval_privacy_baseline.py  eval_privacy_parallel.py  eval_privacy_parallel_bdt.py  eval_utility.py  generate_fidelity_plots.py  generate_metadata.py  impute.py  split.py  train_synthesiser.py  tune_evaluators.py  tune_evaluators_parallel.py  tune_synthesiser.py  tune_synthesiser_parallel.py
synthesisers/: binary_diffusion.py  copula_gan.py  ctgan.py  gaussian_copula.py  potnet.py  tvae.py
synthesisers/binary_diffusion_tabular/: __init__.py  dataset.py  diffusion.py  model.py  trainer.py  transformation.py  utils.py
synthesisers/potnet_core/: __init__.py  data_transformer.py  potnet.py
