[project]
name = "sdg-aws-sagemaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.1.1",
    "dotenv>=0.9.9",
    "ema-pytorch==0.7.6",
    "geomloss==0.2.6",
    "gower==0.1.2",
    "miceforest==6.0.3",
    "optuna==4.3.0",
    "optuna-integration[wandb]>=4.7.0",
    "pandas>=2.3.3",
    "pot==0.9.5",
    "pyyaml==6.0.2",
    "scikit-learn==1.5.2",
    "sdv==1.17.1",
    "tomli==2.2.1",
    "tomli-w==1.2.0",
    "torch==2.5.0",
    "torchmetrics==1.6.0",
    "tqdm==4.67.1",
    "wandb==0.19.0",
]
